extensions/bt-system-bundle/src/endpoints/excel-importer/services/__tests__/fixtures/invalid-files/csv-masquerading.xlsx
name,amount
alpha,10
beta,20
